--- a/docs/locales/fr/LC_MESSAGES/README.po
+++ b/docs/locales/fr/LC_MESSAGES/README.po
@@ -7,7 +7,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: pidroidbot-discord v0.0.1\n"
+"Project-Id-Version: pidroidbot-discord test\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-04-02 11:44+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
@@ -34,15 +34,5 @@ msgstr ""
 
 #: ../../source/README.md:9
 msgid "some text for body"
-msgstr ""
-
-#~ msgid ""
-#~ "GitHub release (latest by date) GitHub"
-#~ " build  i18n Coverage License: CC "
-#~ "BY-NC-SA 4.0<br />some text for "
-#~ "body"
-#~ msgstr ""
-
-#~ msgid "new test 2"
-#~ msgstr ""
+msgstr "du texte pour quelqu'un"
 
