--- a/docs/locales/fr/LC_MESSAGES/index.po
+++ b/docs/locales/fr/LC_MESSAGES/index.po
@@ -7,9 +7,9 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: pidroidbot-discord v0.0.1\n"
+"Project-Id-Version: pidroidbot-discord test\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-01 14:44+0200\n"
+"POT-Creation-Date: 2021-04-02 11:12+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
