--- a/docs/locales/fr_FR/LC_MESSAGES/index.po
+++ b/docs/locales/fr_FR/LC_MESSAGES/index.po
@@ -7,12 +7,13 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: pidroidbot-discord test\n"
+"Project-Id-Version: pidroidbot-discord main\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-02 11:12+0200\n"
+"POT-Creation-Date: 2021-04-07 15:30+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -32,7 +33,7 @@ msgstr ""
 
 #: ../../source/index.rst:2
 msgid "Welcome to pidroidbot-discord's documentation!"
-msgstr "Bienvenu"
+msgstr ""
 
 #: ../../source/index.rst:12
 msgid "Indices and tables"
