--- a/docs/locales/fr/LC_MESSAGES/README.po
+++ b/docs/locales/fr/LC_MESSAGES/README.po
@@ -13,21 +13,23 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: fr_FR\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.0\n"
 
-#: ../../source/pidroidbot_discord.plugins.vers.rst:2
-msgid "pidroidbot\\_discord.plugins.vers package"
+#: ../../source/README.md:1
+msgid "PidroidBot for Discord ##version##"
 msgstr ""
 
-#: ../../source/pidroidbot_discord.plugins.vers.rst:5
-msgid "Module contents"
+#: ../../source/README.md:3
+msgid ""
+"GitHub release (latest by date) GitHub build  i18n Coverage License: CC "
+"BY-NC-SA 4.0"
 msgstr ""
 
-#: of pidroidbot_discord.plugins.vers.Version:1
-msgid "Bases: :class:`pidroidbot_discord.plugins.core.CogCore`"
+#: ../../source/README.md:7
+msgid "Documentation<br />some text for body"
 msgstr ""
 
