--- a/docs/locales/fr/LC_MESSAGES/sphinx.po
+++ b/docs/locales/fr/LC_MESSAGES/sphinx.po
@@ -13,41 +13,39 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: fr_FR\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.0\n"
 
-#: ../../source/index.rst:4
-msgid "Readme"
+#: ../../source/_templates/versions.html:12
+msgid "Languages"
 msgstr ""
 
-#: ../../source/index.rst:4
-msgid "Source"
+#: ../../source/_templates/versions.html:22
+msgid "Versions"
 msgstr ""
 
-#: ../../source/index.rst:4
-msgid "Contents:"
+#: ../../source/_templates/versions.html:32
+msgid "Downloads"
 msgstr ""
 
-#: ../../source/index.rst:2
-msgid "Welcome to pidroidbot-discord's documentation!"
+#: ../../source/_templates/versions.html:40
+msgid "On Read the Docs"
 msgstr ""
 
-#: ../../source/index.rst:12
-msgid "Indices and tables"
+#: ../../source/_templates/versions.html:42
+msgid "Project Home"
 msgstr ""
 
-#: ../../source/index.rst:14
-msgid ":ref:`genindex`"
+#: ../../source/_templates/versions.html:45
+msgid "Builds"
 msgstr ""
 
-#: ../../source/index.rst:15
-msgid ":ref:`modindex`"
-msgstr ""
-
-#: ../../source/index.rst:16
-msgid ":ref:`search`"
+#: ../../source/_templates/versions.html:50
+msgid ""
+"Free document hosting provided by <a "
+"href=\"http://www.readthedocs.org\">Read the Docs</a>."
 msgstr ""
 
