--- a/docs/locales/fr/LC_MESSAGES/sphinx.po
+++ b/docs/locales/fr/LC_MESSAGES/sphinx.po
@@ -12,47 +12,40 @@ msgstr ""
 "POT-Creation-Date: 2021-04-12 15:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fr\n"
-"Language-Team: fr <LL@li.org>\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.0\n"
 
-#: ../../index.rst:9
-msgid "Readme"
+#: ../../_templates/versions.html:12
+msgid "Languages"
 msgstr ""
 
-#: ../../index.rst:9
-msgid "Changelog"
+#: ../../_templates/versions.html:22
+msgid "Versions"
 msgstr ""
 
-#: ../../index.rst:9
-msgid "Source"
+#: ../../_templates/versions.html:32
+msgid "Downloads"
 msgstr ""
 
-#: ../../index.rst:9
-msgid "Contents:"
+#: ../../_templates/versions.html:40
+msgid "On Read the Docs"
 msgstr ""
 
-#: ../../index.rst:7
-msgid "Welcome to pidroidbot-discord's documentation!"
+#: ../../_templates/versions.html:42
+msgid "Project Home"
 msgstr ""
 
-#: ../../index.rst:19
-msgid "Indices and tables"
+#: ../../_templates/versions.html:45
+msgid "Builds"
 msgstr ""
 
-#: ../../index.rst:21
-msgid ":ref:`genindex`"
-msgstr ""
-
-#: ../../index.rst:22
-msgid ":ref:`modindex`"
-msgstr ""
-
-#: ../../index.rst:23
-msgid ":ref:`search`"
+#: ../../_templates/versions.html:50
+msgid ""
+"Free document hosting provided by <a "
+"href=\"http://www.readthedocs.org\">Read the Docs</a>."
 msgstr ""
 
