--- a/docs/locales/fr/LC_MESSAGES/readme.po
+++ b/docs/locales/fr/LC_MESSAGES/readme.po
@@ -9,18 +9,19 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pidroidbot-discord main\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-12 15:38+0200\n"
+"POT-Creation-Date: 2021-04-18 14:36+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fr\n"
+"Language-Team: fr <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n > 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.0\n"
 
 #: ../../../README.rst:3
-msgid "PidroidBot for Discord v0.0.56 |i_gh_star| |i_gh_license|"
+msgid "PidroidBot for Discord v0.0.63 |i_gh_star| |i_gh_license|"
 msgstr ""
 
 #: ../../../README.rst:5
@@ -123,4 +124,7 @@ msgstr ""
 #: ../../../README.rst:57
 msgid "Are `welcome ! <https://github.com/PiDroid-B/pidroidbot-discord/issues>`_"
 msgstr ""
+
+#~ msgid "PidroidBot for Discord v0.0.56 |i_gh_star| |i_gh_license|"
+#~ msgstr ""
 
