--- a/docs/locales/fr/LC_MESSAGES/readme.po
+++ b/docs/locales/fr/LC_MESSAGES/readme.po
@@ -21,7 +21,7 @@ msgstr ""
 "Generated-By: Babel 2.9.0\n"
 
 #: ../../../README.rst:3
-msgid "PidroidBot for Discord 0.0.67.rc_0 |i_gh_star| |i_gh_license|"
+msgid "PidroidBot for Discord 0.0.67.rc0 |i_gh_star| |i_gh_license|"
 msgstr ""
 
 #: ../../../README.rst:5
